--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.scss
@@ -11,7 +11,7 @@ $typography: map.get(gio.$mat-theme, typography);
     gap: 16px;
   }
 
-  &__entrypoints {
+  &__badge-list {
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
