--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
@@ -23,7 +23,7 @@
 
   <div class="steps">
     <stepper-menu-step
-      *ngFor="let step of lastStepPerLabelNumber"
+      *ngFor="let step of lastStepOfEachLabel"
       [stepNumber]="step.labelNumber"
       [step]="step"
       [activeStep]="currentStep.labelNumber === step.labelNumber"
