refactor(console): simplify + mutualize steps 2 + 3

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/api-creation-steps-common.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/api-creation-steps-common.component.scss
@@ -36,4 +36,15 @@ $typography: map.get(gio.$mat-theme, typography);
       margin-top: 24px;
     }
   }
+
+  &__list-option {
+    &__selected {
+      border: 2px solid mat.get-color-from-palette(gio.$mat-accent-palette, 'default') !important;
+    }
+  }
+
+  &__badge {
+    font-weight: 700;
+    vertical-align: bottom;
+  }
 }
