--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2/api-creation-v4-step-2.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2/api-creation-v4-step-2.component.html
@@ -26,17 +26,16 @@
     <mat-selection-list *ngIf="entrypoints" formControlName="selectedEntrypointsIds" class="gio-selection-list" disableRipple="true">
       <mat-list-option
         *ngFor="let entrypoint of entrypoints"
-        [id]="entrypoint.id"
         [value]="entrypoint.id"
         checkboxPosition="before"
         #listOption
-        [class.entrypoint-selected]="listOption.selected"
+        [class.api-creation-v4__list-option__selected]="listOption.selected"
       >
         <gio-selection-list-option-layout>
           <gio-selection-list-option-layout-title>
             {{ entrypoint.name }}
-            <span class="gio-badge-primary strong-badge">New</span>
-            <span class="gio-badge-accent strong-badge" *ngIf="entrypoint.isEnterprise">Enterprise</span>
+            <span class="gio-badge-primary api-creation-v4__badge">New</span>
+            <span class="gio-badge-accent api-creation-v4__badge" *ngIf="entrypoint.isEnterprise">Enterprise</span>
           </gio-selection-list-option-layout-title>
 
           <gio-selection-list-option-layout-body>
@@ -63,8 +62,8 @@
     </mat-card>
 
     <div class="api-creation-v4__step__footer">
-      <button id="previous" mat-stroked-button type="button" (click)="goBack()">Previous</button>
-      <button id="validate" mat-raised-button color="primary" type="submit" [disabled]="formGroup.invalid">Select my entrypoints</button>
+      <button mat-stroked-button type="button" (click)="goBack()">Previous</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="formGroup.invalid">Select my entrypoints</button>
     </div>
   </form>
 </mat-card>
