--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3/api-creation-v4-step-3.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3/api-creation-v4-step-3.component.html
@@ -28,17 +28,16 @@
     <mat-selection-list *ngIf="endpoints" formControlName="selectedEndpointsIds" class="gio-selection-list" disableRipple="true">
       <mat-list-option
         *ngFor="let endpoint of endpoints"
-        [id]="endpoint.id"
         [value]="endpoint.id"
         checkboxPosition="before"
         #listOption
-        [class.endpoint-selected]="listOption.selected"
+        [class.api-creation-v4__list-option__selected]="listOption.selected"
       >
         <gio-selection-list-option-layout>
           <gio-selection-list-option-layout-title>
             {{ endpoint.name }}
-            <span class="gio-badge-primary strong-badge">New</span>
-            <span class="gio-badge-accent strong-badge" *ngIf="endpoint.isEnterprise">Enterprise</span>
+            <span class="gio-badge-primary api-creation-v4__badge">New</span>
+            <span class="gio-badge-accent api-creation-v4__badge" *ngIf="endpoint.isEnterprise">Enterprise</span>
           </gio-selection-list-option-layout-title>
 
           <gio-selection-list-option-layout-body>
@@ -56,8 +55,8 @@
     </mat-selection-list>
 
     <div class="api-creation-v4__step__footer">
-      <button id="previous" mat-stroked-button type="button" (click)="goBack()">Previous</button>
-      <button id="validate" mat-raised-button color="primary" type="submit" [disabled]="formGroup.invalid">Select my endpoints</button>
+      <button mat-stroked-button type="button" (click)="goBack()">Previous</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="formGroup.invalid">Select my endpoints</button>
     </div>
   </form>
 </mat-card>
