--- a/gravitee-apim-console-webui/src/management/api/analytics/pathMappings/api-path-mappings.component.html
+++ b/gravitee-apim-console-webui/src/management/api/analytics/pathMappings/api-path-mappings.component.html
@@ -18,17 +18,12 @@
 <div class="path-mappings__header">
   <h2>Path Mappings</h2>
   <div>
-    <button
-      *gioPermission="{ anyOf: ['api-definition-u'] }"
-      mat-raised-button
-      type="button"
-      color="primary"
-      [disabled]="isReadOnly"
-      (click)="addPathMapping()"
-    >
-      <mat-icon svgIcon="gio:plus"></mat-icon>
-      Add New Path Mapping
-    </button>
+    <ng-container *ngIf="!isReadOnly">
+      <button *gioPermission="{ anyOf: ['api-definition-u'] }" mat-raised-button type="button" color="primary" (click)="addPathMapping()">
+        <mat-icon svgIcon="gio:plus"></mat-icon>
+        Add New Path Mapping
+      </button>
+    </ng-container>
   </div>
 </div>
 
@@ -46,13 +41,12 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef id="actions"></th>
       <td mat-cell *matCellDef="let element">
-        <div class="path-mappings__table__actions">
+        <div class="path-mappings__table__actions" *ngIf="!isReadOnly">
           <button
             mat-icon-button
             aria-label="Button to edit a path mapping"
             matTooltip="Edit path mapping"
             *gioPermission="{ anyOf: ['api-definition-u'] }"
-            [disabled]="isReadOnly"
             (click)="editPathMapping(element.path)"
           >
             <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
@@ -62,7 +56,6 @@
             mat-icon-button
             aria-label="Button to delete a path mapping"
             matTooltip="Delete path mapping"
-            [disabled]="isReadOnly"
             (click)="deletePathMapping(element.path)"
           >
             <mat-icon svgIcon="gio:trash"></mat-icon>
