feat(console): api creation - improve & add style for stepper menu

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
@@ -27,6 +27,7 @@
       [stepNumber]="step.labelNumber"
       [step]="step"
       [activeStep]="currentStep.labelNumber === step.labelNumber"
+      (goToStep)="goToStep.emit($event)"
       >{{ step.label }}</stepper-menu-step
     >
   </div>
