--- a/gravitee-apim-console-webui/src/management/api/creation/v4/api-creation-v4.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/api-creation-v4.component.html
@@ -16,7 +16,11 @@
 
 -->
 <div class="api-creation-v4__container">
-  <api-creation-stepper-menu [menuSteps]="menuSteps$ | async" [currentStep]="currentStep"></api-creation-stepper-menu>
+  <api-creation-stepper-menu
+    [menuSteps]="menuSteps$ | async"
+    [currentStep]="currentStep"
+    (goToStep)="goToStep($event)"
+  ></api-creation-stepper-menu>
   <div class="api-creation-v4__current-step">
     <ng-container *ngComponentOutlet="currentStep.component; injector: currentStep.injector"></ng-container>
   </div>
