--- a/gravitee-apim-console-webui/src/index.scss
+++ b/gravitee-apim-console-webui/src/index.scss
@@ -37,6 +37,7 @@
 @import 'components/alerts/dashboard/alerts-dashboard';
 @import 'components/alerts/alert/alert';
 @import 'components/dialog/apiKeyMode/api-key-mode-choice.dialog';
+@import 'components/alerts/alertEnginePromotion/alert-engine-promotion';
 
 @import 'management/analytics';
 @import 'management/api/api';
