feat(console): add small loading progress for wait api data

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3/api-creation-v4-step-3.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3/api-creation-v4-step-3.component.html
@@ -25,7 +25,12 @@
   </div>
 
   <form [formGroup]="formGroup" (ngSubmit)="save()">
-    <mat-selection-list *ngIf="endpoints" formControlName="selectedEndpointsIds" class="gio-selection-list" disableRipple="true">
+    <mat-selection-list
+      *ngIf="endpoints; else loadingTpl"
+      formControlName="selectedEndpointsIds"
+      class="gio-selection-list"
+      disableRipple="true"
+    >
       <mat-list-option
         *ngFor="let endpoint of endpoints"
         [value]="endpoint.id"
@@ -60,3 +65,5 @@
     </div>
   </form>
 </mat-card>
+
+<ng-template #loadingTpl><mat-progress-bar mode="indeterminate"></mat-progress-bar></ng-template>
