--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2/api-creation-v4-step-2.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2/api-creation-v4-step-2.component.html
@@ -23,7 +23,12 @@
   </div>
 
   <form [formGroup]="formGroup" (ngSubmit)="save()">
-    <mat-selection-list *ngIf="entrypoints" formControlName="selectedEntrypointsIds" class="gio-selection-list" disableRipple="true">
+    <mat-selection-list
+      *ngIf="entrypoints; else loadingTpl"
+      formControlName="selectedEntrypointsIds"
+      class="gio-selection-list"
+      disableRipple="true"
+    >
       <mat-list-option
         *ngFor="let entrypoint of entrypoints"
         [value]="entrypoint.id"
@@ -67,3 +72,5 @@
     </div>
   </form>
 </mat-card>
+
+<ng-template #loadingTpl><mat-progress-bar mode="indeterminate"></mat-progress-bar></ng-template>
