feat(console): impl empty security & documentation step

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo('Document')">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('Documentation')">Change</button>
         </div>
       </div>
     </div>
