--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-1-api-details/step-1-api-details.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-1-api-details/step-1-api-details.component.scss
@@ -1,7 +1,7 @@
 @use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
-.api-creation-v4-step-1 {
+.step-1-api-details {
   &__row {
     display: flex;
     flex-direction: row;
