--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
@@ -23,7 +23,7 @@
   <div class="api-creation-v4-step-6__body">
     <!--    Step 1 -->
     <div id="step-1" class="api-creation-v4-step-6__step">
-      <div class="mat-h3">API metadata</div>
+      <div class="mat-h3">API Details</div>
       <div class="api-creation-v4-step-6__step__body">
         <div class="api-creation-v4-step-6__step__info">
           <div class="api-creation-v4-step-6__step__info__row">
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo('API Metadata')">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('API Details')">Change</button>
         </div>
       </div>
     </div>
