refactor(console): rework api-creation-v4-step-2 to step-2-entrypoints..

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-1-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-1-list.component.scss
@@ -1,7 +1,7 @@
 @use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
-.api-creation-v4-step-2 {
+.step-2-entrypoints-1-list {
   &__banner {
     // Note: WIP - to be removed when we complete the banner
     display: none;
