--- a/gravitee-apim-console-webui/src/components/gio-entrypoint-icon/gio-entrypoint-icon.component.scss
+++ b/gravitee-apim-console-webui/src/components/gio-entrypoint-icon/gio-entrypoint-icon.component.scss
@@ -13,22 +13,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-export type ApiCreationPayload = Partial<{
-  name?: string;
-  version?: string;
-  description?: string;
-  selectedEntrypoints?: {
-    id: string;
-    name: string;
-  }[];
-  entrypoints?: {
-    type: string;
-    configuration: any;
-  }[];
-  selectedEndpoints?: {
-    id: string;
-    name: string;
-  }[];
+@use 'sass:map';
+@use '@gravitee/ui-particles-angular' as gio;
 
-  deploy: boolean;
-}>;
+:host {
+  display: flex;
+  align-items: center;
+}
+
+.gio-entrypoint-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 3px;
+}
