refactor(console): rework api-creation-v4-step-6 to step-6-summary

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.scss
@@ -4,7 +4,7 @@
 
 $typography: map.get(gio.$mat-theme, typography);
 
-.api-creation-v4-step-6 {
+.step-6-summary {
   &__body {
     display: flex;
     flex-direction: column;
