refactor(console): rename gio-entrypoint-icon to gio-connector-icon

--- a/gravitee-apim-console-webui/src/components/gio-connector-icon/gio-connector-icon.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-connector-icon/gio-connector-icon.component.html
@@ -15,4 +15,4 @@
     limitations under the License.
 
 -->
-<mat-icon class="gio-entrypoint-icon" [svgIcon]="entrypointIcon"></mat-icon> {{ entrypointName }}
+<mat-icon class="gio-connector-icon" [svgIcon]="connectorIcon"></mat-icon> {{ connectorName }}
