--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-menu-item/step-2-menu-item.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-menu-item/step-2-menu-item.component.html
@@ -17,6 +17,6 @@
 -->
 <ng-container *ngIf="entrypoints">
   <div *ngFor="let entrypoint of entrypoints" class="step-2-menu-item">
-    <gio-entrypoint-icon [entrypointId]="entrypoint.id" [entrypointName]="entrypoint.name"></gio-entrypoint-icon>
+    <gio-connector-icon connectorType="entrypoint" [connectorId]="entrypoint.id" [connectorName]="entrypoint.name"></gio-connector-icon>
   </div>
 </ng-container>
