--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-connector-menu-item/step-connector-menu-item.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-connector-menu-item/step-connector-menu-item.component.scss
@@ -1,7 +1,7 @@
 @use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
-.step-2-menu-item {
+.step-connector-menu-item {
   display: flex;
   flex-direction: column;
   font-weight: bold;
