feat(console): add paths configuration on entrypoints screen

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/api-creation-steps-common.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/api-creation-steps-common.component.scss
@@ -53,5 +53,9 @@ $typography: map.get(gio.$mat-theme, typography);
     border-radius: 8px;
     padding: 16px;
     margin-top: 16px;
+
+    &__subTitle {
+      font-size: 14px;
+    }
   }
 }
