--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.html
@@ -48,7 +48,7 @@
 
     <div class="api-creation-v4__step__footer">
       <button id="previous" mat-stroked-button type="button" (click)="goBack()">Previous</button>
-      <button id="validate" mat-raised-button color="primary" type="submit" [disabled]="formGroup.invalid">Validate my entrypoints</button>
+      <button id="validate" mat-flat-button color="primary" type="submit" [disabled]="formGroup.invalid">Validate my entrypoints</button>
     </div>
   </form>
 </mat-card>
