--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
@@ -143,7 +143,7 @@
           matTooltip="Your API can't be consumed"
         ></mat-icon>
       </button>
-      <button color="primary" mat-raised-button type="button" (click)="createApi(true)">
+      <button color="primary" mat-flat-button type="button" (click)="createApi(true)">
         Deploy my API<mat-icon
           svgIcon="gio:info"
           class="step-6-summary__footer__button-icon"
