--- a/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
@@ -45,6 +45,7 @@
           <input type="text" matInput formControlName="path" required="true" placeholder="Context-path" />
           <mat-error *ngIf="control.get('path').hasError('required')">Context path is required.</mat-error>
           <mat-error *ngIf="control.get('path').hasError('contextPath')"> {{ control.get('path').getError('contextPath') }}</mat-error>
+          <mat-error *ngIf="control.get('path').hasError('pattern')">Context path is not valid.</mat-error>
         </mat-form-field>
       </td>
       <td class="gio-form-listeners__table__row__td">
