--- a/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-virtual-host/gio-form-listeners-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-virtual-host/gio-form-listeners-virtual-host.component.html
@@ -51,7 +51,25 @@
     >
       <td class="gio-form-listeners__table__row__td">
         <mat-form-field appearance="standard" class="gio-form-listeners__table__field">
-          <input type="text" matInput formControlName="host" placeholder="Host" />
+          <input #hostInput type="text" matInput formControlName="_hostSubDomain" placeholder="Host" [matAutocomplete]="hostAuto" />
+
+          <!-- Config Autocomplete to only select domain with input value -->
+          <mat-autocomplete #hostAuto="matAutocomplete">
+            <mat-option
+              *ngFor="let domain of domainRestrictions"
+              [value]="hostInput.value"
+              (click)="control.get('_hostDomain').setValue(domain)"
+            >
+              {{ hostInput.value ? hostInput.value + '.' + domain : domain }}
+            </mat-option>
+          </mat-autocomplete>
+
+          <span matSuffix
+            ><em>{{ control.get('_hostDomain').value }}</em></span
+          >
+
+          <mat-error *ngIf="control.get('host').hasError('required')">Host is required.</mat-error>
+          <mat-error *ngIf="control.get('host').hasError('host')">Host is not valid (must end with one of restriction domain).</mat-error>
         </mat-form-field>
       </td>
       <td class="gio-form-listeners__table__row__td">
@@ -59,6 +77,7 @@
           <input type="text" matInput formControlName="path" required="true" placeholder="Context-path" />
           <mat-error *ngIf="control.get('path').hasError('required')">Context path is required.</mat-error>
           <mat-error *ngIf="control.get('path').hasError('contextPath')"> {{ control.get('path').getError('contextPath') }}</mat-error>
+          <mat-error *ngIf="control.get('path').hasError('pattern')">Context path is not valid</mat-error>
         </mat-form-field>
       </td>
       <td class="gio-form-listeners__table__row__td">
