feat: implement delete member in migrated api member page

--- a/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.scss
@@ -15,3 +15,9 @@
 .primary-owner-name {
   font-weight: bold;
 }
+
+.action-cell {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
