--- a/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.html
@@ -50,7 +50,14 @@
           </mat-select>
         </td>
       </ng-container>
-
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let member">
+          <div class="action-cell" *ngIf="member.role !== 'PRIMARY_OWNER'">
+            <button type="button" mat-icon-button (click)="removeMember(member)"><mat-icon svgIcon="gio:trash"></mat-icon></button>
+          </div>
+        </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
