feat: make api description optional

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-1-api-details/step-1-api-details.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-1-api-details/step-1-api-details.component.html
@@ -38,7 +38,7 @@
     </div>
     <div class="step-1-api-details__row">
       <mat-form-field appearance="outline">
-        <textarea id="description" matInput #input maxlength="250" formControlName="description" rows="4" required="true"></textarea>
+        <textarea id="description" matInput #input maxlength="250" formControlName="description" rows="4"></textarea>
         <mat-label>Description</mat-label>
         <mat-hint align="start">Describe how your API works</mat-hint>
         <mat-hint align="end">{{ input.value.length }}/250</mat-hint>
