fix(console): update creation flow ui

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
@@ -23,7 +23,7 @@
   <div class="step-6-summary__body">
     <!--    Step 1 -->
     <div id="step-1" class="step-6-summary__step">
-      <div class="mat-h3">API Details</div>
+      <div class="mat-h3">API details</div>
       <div class="step-6-summary__step__body">
         <div class="step-6-summary__step__info">
           <div class="step-6-summary__step__info__row">
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo('API Details')">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('API details')">Change</button>
         </div>
       </div>
     </div>
