--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-5-documentation/step-5-documentation.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-5-documentation/step-5-documentation.component.html
@@ -25,7 +25,7 @@
     🚧 TODO: Implement this step
     <div class="api-creation-v4__step__footer">
       <button mat-stroked-button type="button" (click)="onExit()">Previous</button>
-      <button mat-flat-button type="button">Skip this step</button>
+      <button mat-stroked-button type="button">Skip this step</button>
       <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Validate my documentation</button>
     </div>
   </form>
