--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-connector-menu-item/step-connector-menu-item.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-connector-menu-item/step-connector-menu-item.component.scss
@@ -3,7 +3,7 @@
 
 .step-connector-menu-item {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   font-weight: bold;
 
   &__icon {
