--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3-endpoints/step-3-endpoints-1-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3-endpoints/step-3-endpoints-1-list.component.html
@@ -40,6 +40,7 @@
       >
         <gio-selection-list-option-layout>
           <gio-selection-list-option-layout-title>
+            <mat-icon class="api-creation-v4__icon" [svgIcon]="endpoint.icon"></mat-icon>
             {{ endpoint.name }}
             <span class="gio-badge-primary api-creation-v4__badge">New</span>
             <span class="gio-badge-accent api-creation-v4__badge" *ngIf="endpoint.isEnterprise">Enterprise</span>
