feat(console): add Step2Entrypoints0ArchitectureComponent

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/stepper-menu-step/stepper-menu-step.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/stepper-menu-step/stepper-menu-step.component.scss
@@ -109,5 +109,10 @@ $typography: map.get(gio.$mat-theme, typography);
       border-top: 2px solid mat.get-color-from-palette(gio.$mat-dove-palette, 'darker10');
       padding: 16px;
     }
+
+    // Make sure wrapper is not displayed if menu item is empty
+    ::ng-deep &__wrapper:has(> *:empty) {
+      display: none;
+    }
   }
 }
